@@ -40,7 +40,7 @@ public class AmassEffect extends TokenEffectBase {
         sb.append(Lang.nounWithNumeral(amount, "+1/+1 counter"));
 
         // TODO fix reminder after CR
-        sb.append("on an Army you control. If you don't control one, create a 0/0 black " + type + " Army creature token first.)");
+        sb.append(" on an Army you control. If you don't control one, create a 0/0 black " + type + " Army creature token first.)");
 
         return sb.toString();
     }
@@ -49,7 +49,10 @@ public class AmassEffect extends TokenEffectBase {
     public void resolve(SpellAbility sa) {
         final Card source = sa.getHostCard();
         final Game game = source.getGame();
-        final Player amasser = getTargetPlayers(sa).get(0);
+        final Player amasser = getTargetPlayers(sa).getFirst();
+        if (amasser == null) {
+            return;
+        }
         final int amount = AbilityUtils.calculateAmount(source, sa.getParamOrDefault("Num", "1"), sa);
         final String type = sa.getParam("Type");
 
@@ -61,7 +64,9 @@ public class AmassEffect extends TokenEffectBase {
             StringBuilder sb = new StringBuilder("b_0_0_");
             sb.append(sa.getOriginalParam("Type").toLowerCase()).append("_army");
 
-            final Card result = TokenInfo.getProtoType(sb.toString(), sa, amasser, false);
+            Card result = TokenInfo.getProtoType(sb.toString(), sa, amasser, false);
+            if (result == null) //Custom Amass type.
+                result = TokenInfo.getProtoType("b_0_0_army", sa, amasser, false);
             // need to alter the token to add the Type from the Parameter
             result.setCreatureTypes(Lists.newArrayList(type, "Army"));
             result.setName(type + " Army Token");
